# yadro-test-task

./: .~lock.test.csv#  CMakeLists.txt  README.md  main  main.cpp  main.h  methods.cpp  test.cpp  test.csv
